--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,12 @@
+<header>
+  <div class="site-header">
+    <img src="/assets/profile.jpg" alt="Profile" class="profile-img">
+    <h1>{{ site.title }}</h1>
+    <nav>
+      {% for item in site.data.navigation.main %}
+      <a href="{{ item.url }}">{{ item.title }}</a>
+      {% endfor %}
+    </nav>
+  </div>
+</header>
 
